--- a/lab4/hazi4_bkinga/app/src/main/res/layout/adapter2.xml
+++ b/lab4/hazi4_bkinga/app/src/main/res/layout/adapter2.xml
@@ -30,10 +30,61 @@
         android:id="@+id/infotextViewID"
         android:layout_width="98dp"
         android:layout_height="19dp"
+        android:layout_marginBottom="2dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintStart_toEndOf="@+id/imageViewID"
-        app:layout_constraintTop_toBottomOf="@+id/nametextViewID" />
+        app:layout_constraintTop_toBottomOf="@+id/nametextViewID"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:text="Vanzari:"
+        app:layout_constraintBaseline_toBaselineOf="@+id/VanID"
+        app:layout_constraintStart_toEndOf="@+id/infotextViewID" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="23dp"
+        android:layout_marginStart="28dp"
+        android:text="Cumparari:"
+        app:layout_constraintBaseline_toBaselineOf="@+id/CumID"
+        app:layout_constraintStart_toEndOf="@+id/nametextViewID" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="55dp" />
+
+    <TextView
+        android:id="@+id/CumID"
+        android:layout_width="78dp"
+        android:layout_height="23dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/VanID"
+        android:layout_width="79dp"
+        android:layout_height="20dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="4dp"
+        android:text="0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/CumID" />
 
 </android.support.constraint.ConstraintLayout>
