--- a/lab4/hazi4_bkinga/app/src/main/res/layout/detali.xml
+++ b/lab4/hazi4_bkinga/app/src/main/res/layout/detali.xml
@@ -61,4 +61,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vevesID" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="154dp"
+        android:layout_height="149dp"
+        android:layout_marginBottom="157dp"
+        android:layout_marginEnd="180dp"
+        android:layout_marginStart="156dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/aud" />
+
 </android.support.constraint.ConstraintLayout>
